Implement real OpenPay and automatic receipts
